k8s/apps/base/service-api-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-api-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: aibot-api
  ports:
    - name: http
      port: 27180
      targetPort: http
