k8s/apps/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-api
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: aibot-api
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
