k8s/apps/base/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-gateway
spec:
  selector:
    app.kubernetes.io/name: aibot-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
