k8s/apps/base/service-llm-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-llm-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: aibot-llm
  ports:
    - name: http
      port: 27182
      targetPort: http
