k8s/apps/base/service-llm.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-llm
spec:
  selector:
    app.kubernetes.io/name: aibot-llm
  ports:
    - name: http
      port: 80
      targetPort: http
