k8s/apps/base/service-push.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-push
spec:
  selector:
    app.kubernetes.io/name: aibot-push
  ports:
    - name: http
      port: 80
      targetPort: http
