k8s/apps/base/service-ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot-ws
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: aibot-ws
  ports:
    - name: ws
      port: 80
      targetPort: ws
      nodePort: 30089
